force-app/main/default/objects/ssot__AuthorizationApplicationAsset__dlm/fields/ssot__AuthorizationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorizationId__c</fullName>
    <label>Authorization</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>