force-app/main/default/objects/ssot__AuthorizationApplicationAsset__dlm/fields/ssot__rel_1739512788357_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512788357_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AuthorizationApplicationAsset_Author_rel</label>
    <referenceTo>ssot__PartyBusinessLicense__dlm</referenceTo>
    <relationshipLabel>AuthorizationApplicationAsset_Author_rel</relationshipLabel>
    <relationshipName>rel_1739512788357_end</relationshipName>
    <type>Lookup</type>
</CustomField>